# scremind

./: AGENTS.md  Cargo.toml  README.md
assets/: app.rc
src/: autostart.rs  config.rs  main.rs  overlay.rs  timer.rs  tray.rs
