[package]
name = "scremind"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
